[package]
name = "query-parser"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2018"

[dependencies]
nom = "6.0.1"
serde = { version = "1.0.118", features = ["derive"], optional = true }
serde_json = { version = "1.0.61", optional = true }

[features]
json = ["serde", "serde_json"]
