[package]
name = "query-parser"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
nom = "6.0.1"
serde = { version = "1.0.118", features = ["derive"], optional = true }
serde_json = { version = "1.0.61", optional = true }

[features]
json = ["serde", "serde_json"]

[dev-dependencies]
env_logger = "0.8.2"
