[package]
name = "query-parser"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.14"
nom = "6.1.0"
serde = { version = "1.0.123", features = ["derive"], optional = true }

[dev-dependencies]
env_logger = "0.8.2"
serde_json = "1.0.62"
